--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
     "react": "18.1.0",
